fixed spacing issue with gallery

--- a/Coding Project/client/src/components/ImageGallery/ImageGallery.module.css
+++ b/Coding Project/client/src/components/ImageGallery/ImageGallery.module.css
@@ -1,4 +1,3 @@
-.image-gallery-image {
+.image-gallery-container {
     width: 100%;
-    height: 600px;
 }
